--- a/src/main/resources/templates/login/login_form.html
+++ b/src/main/resources/templates/login/login_form.html
@@ -101,7 +101,7 @@ function joinPageForm(){
 		</form>
 
 		<div class="bottom-links">
-			<a href="#" onclick="alert('아이디 찾기 기능')">아이디 찾기</a> 
+			<a href="login/foundID" onclick="alert('아이디 찾기 기능')">아이디 찾기</a> 
 			<span>|</span> 
 			<a href="#" onclick="alert('비밀번호 찾기 기능')">비밀번호 찾기</a>
 			<span>|</span> 
