--- a/src/main/resources/templates/fragments/corpHeader.html
+++ b/src/main/resources/templates/fragments/corpHeader.html
@@ -83,10 +83,10 @@
 	        </td>
 	        <td>
 	          <div class="corp-submenu-item">
-	            <span class="corp-submenu-link">전체 인재</span><br>
-	            <span class="corp-submenu-link">열람한 인재정보</span><br>
-	            <span class="corp-submenu-link">스크랩한 인재정보</span><br>
-	            <span class="corp-submenu-link">면접제의한 인재정보</span><br>
+				<a th:href="@{/corp/talentPool/talent_pool}"><span class="corp-submenu-link">전체 인재</span></a><br>
+	            <a th:href="@{/corp/talentPool/offer}"><span class="corp-submenu-link">면접제의한 인재정보</span></a><br>
+	            <a th:href="@{/corp/talentPool/scrap}"><span class="corp-submenu-link">스크랩한 인재정보</span></a><br>
+	            <a th:href="@{/corp/talentPool/recently_viewed}"><span class="corp-submenu-link">열람한 인재정보</span></a><br>		
 	            <span class="corp-submenu-link">AI인재추천</span>
 	          </div>
 	        </td>
