--- a/src/main/resources/templates/user/mypage/apply_list.html
+++ b/src/main/resources/templates/user/mypage/apply_list.html
@@ -75,7 +75,7 @@
 											th:data-resumeSeq="${applicant.resumeSeq}">지원이력서</span> | <span
 											th:text="|지원일시 : ${applicant.applicationDate}|"></span> |<span
 											class="cancel-applicant"
-											th:data-applicantSeq="${applicant.jobApplicationSeq}" th:text="${applicant.applicationStatus == 2}?'삭제':'지원취소'">지원취소</span>
+											th:data-applicantSeq="${applicant.jobApplicationSeq}" th:text="${applicant.applicationStatus == 2}?'삭제':'지원취소'"></span>
 									</div>
 								</div>
 								<div class="application-actions">
